istio-gateway-cilium/domain-istio-gateway/grc/grc-peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: grc-peerauthentication
  namespace: grc-team
spec:
  mtls:
    mode: STRICT
